Fixed panel header spacing

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -39,7 +39,7 @@ panel-footer {
   display: grid;
   grid-template-columns: 1fr auto;
   grid-template-rows: auto;
-  padding: 1rem;
+  padding: .5rem 1rem;
 }
 
 panel-content {
